tests/compile_errors/non_power_of_two_capacity_fails.rs
use lamellae::channel;

fn main() {
    let _ = channel!(usize, 5);
}
