tests/compile_errors/non_power_of_two_capacity_fails.stderr
error[E0080]: evaluation panicked: Compile Error: Capacity must be a power of 2!
 --> tests/compile_errors/non_power_of_two_capacity_fails.rs:4:13
  |
4 |     let _ = channel!(usize, 5);
  |             ^^^^^^^^^^^^^^^^^^ evaluation of `main::_` failed here
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `channel` (in Nightly builds, run with -Z macro-backtrace for more info)
